# BCIT-Asignments

./: .gitignore  .gitmodules  LICENSE  README.md
CST/Term1/Comm1116/: Email_assignment.docx  Email_assignment中文.docx  Template01.docx  Template01中文.docx  Template02.docx  Template02中文.docx
CST/Term1/Comp1510/: Comp1510_Assignment_3.docx
CST/Term1/Comp1537/: assignment_5.docx
CST/Term1/Comp1712/: assignment_5.docx
CST/Term1/Comp1800/: .gitignore
CST/Term2/Comp2121/: COMP 2121 系列.docx  Comp2121Lab3.docx  Lecture_1.docx  Lecture_11.docx  Lecture_2.docx  Lecture_3.docx  Lecture_4.docx  Lecture_5.docx  Lecture_6.docx  Lecture_7.docx  Lecture_9.docx  第 6 讲.docx
CST/Term2/Comp2825/: 65-69, 73-78 Summarise Jerry Xing.docx  The Differences Between SSDs and HDDs-JiaruiXing_A01354731.docx
CST/Term2/Stardust/: link.txt
CST/Term3/Comp3721/: Table of Contents.html
CST/Term3/Comp3940/: DirServerThread.java  webapps.lnk
CST/Term3/Comp3940/GroupAssignment2/TestTensorflow/example/: CMakeLists.txt  facedetectcnn-model.cpp  facedetection_export.h  main.cpp
Comp1510/Assignment_2/: build.xml
Comp1510/Assignment_3/: build.xml
Comp1510/Comp1510Lab07XingJ/: Comp1510Lab07.docx
Comp1537/Assignment_4/: index.js  package-lock.json  package.json  readme.txt
Comp1537/Assignment_5/: index.js  package-lock.json  package.json
Comp1537/ajax-maplestory-master/: index.js
Comp1800/Watermelon/: file.txt
Comp1800/demo01/: Jerry.html
Comp2510/Lab2/: CMakeLists.txt  Factorial.c
ISEP/: Cyber notebook.docx  Worksheet 2 - Career Examples NEW.docx
(+1387 files in other folders)
